--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Canvas Flow</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css"
+    />
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <div id="custom-text">
+      <h1>Canvas Flow</h1>
+      <input
+        type="text"
+        id="text"
+        placeholder="Input Text And Enter"
+        maxlength="11"
+      />
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
